--- a/ContainerTypes/ephemeral.yaml
+++ b/ContainerTypes/ephemeral.yaml
@@ -8,7 +8,7 @@ spec:
       image: nginx:1.29
       ports:
         - containerPort: 80
-  #ephemeralContainers:
+  ephemeralContainers:
     - name: mydebug-container
       image: busybox
       stdin: true
