--- a/RollingUPdateSTrategies/Deployment.yaml
+++ b/RollingUPdateSTrategies/Deployment.yaml
@@ -36,4 +36,4 @@ spec:
             limits:
               cpu: 250m
               memory: 128Mi
-      restartPolicy: OnFailure
+      restartPolicy: Always
